# fortune

./: README.md  fortune-api.cabal  fortunes.txt  stack.yaml
elm/: Fortune.elm
html/: index.html
js/: elm.js
src/: Lib.hs
