name:                fortune-api
version:             0.1.0.0
synopsis:            Web app clone of unix fortune program
description:         Please see README.md
homepage:            https://github.com/eu90h/fortune#readme
license:             MIT
license-file:        LICENSE
author:              eu90h
maintainer:          euler90h@gmail.com
copyright:           2016 Stefan (eu90h)
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
                     , transformers
                     , random-extras
                     , random-source
                     , random-fu
                     , random
  default-language:    Haskell2010

executable fortune-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fortune-api
  default-language:    Haskell2010

test-suite fortune-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fortune-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fortune-api
